# Stats_of_Catan

./: CLEANUP_SUMMARY.md  ENHANCEMENT_SUMMARY.md  README.md  demo_complete_system.py  demo_enhanced_system.py  demo_settlement_progression.py  enhanced_catan_helper.py  interactive_setup.py  intersection_reference.py.OLD  pyproject.toml  test_artifacts.py  test_fixed_setup.sh  test_harbor_positions.py  test_harbors.py  test_intelligent_strategy.py  test_interactive_artifacts.py
artifacts/: analysis_summary.json  board.json  example_game_state.json  example_state.json  recommendations.csv  recommendations.json  recommendations_report.txt  vertices.csv
interactive_output/: recommendations.csv
quick_output/: board_data.json  recommendations.csv
scripts/: build_board.py  recommend_cli.py
src/catan/: __init__.py  board.py  board_analyzer.py  game_state.py.backup  harbors.py  hex_coords.py  io_utils.py  recommend.py  recommendations.py  scoring.py  state.py  vertices.py  visualize.py
tests/: test_board.py  test_scoring.py  test_settlement_tracking.py  test_vertices.py
